fix: change some colours for better contrast ratio

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #b5b5b5;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
