--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -141,7 +141,7 @@
   margin: 0;
 }
 .review-date {
-  color: grey;
+  color: #909090;
   min-width: 104px;
   text-align: right;
   padding: 0;
